tests/ui/did_you_mean/issue-46718-struct-pattern-dotdotdot.stderr
error: expected field pattern, found `...`
  --> $DIR/issue-46718-struct-pattern-dotdotdot.rs:11:55
   |
LL |             PersonalityInventory { expressivity: exp, ... } => exp
   |                                                       ^^^
   |
help: to omit remaining fields, use `..`
   |
LL |             PersonalityInventory { expressivity: exp, .. } => exp
   |                                                       ~~

error: aborting due to previous error

